refactor(test): improve code style and modernize test assertions
- Replace explicit types with `final var` throughout test classes
- Modernize collection access using `getFirst()` instead of `get(0)`
- Refactor multi-line assertion calls for better readability
- Simplify single-line lambda expressions in route setup
- Remove unnecessary `throws Exception` from test method signatures

No functional changes; pure code style improvements.

Signed-off-by: devAarno <devaarno@rambler.ru>